--- a/html/userProfile.html
+++ b/html/userProfile.html
@@ -288,9 +288,7 @@
                                 <h5>Valor Total da Multa</h5>
                                 <p id="viewCurrentFine"></p>
                             </div>
-                            <div class="form-group">
-                                <label for="modalPayFine">Valor a Pagar</label>
-                                <input required type="number" value="" min="1" class="form-control" id="modalPayFine" required>
+                            <div class="form-group" id="finePayTotal">
                             </div>
 
                             <!-- BUTTON -->
