--- a/html/statistics.html
+++ b/html/statistics.html
@@ -141,13 +141,16 @@
             <!-- TAB MENU BUTTONS -->
             <ul class="nav nav-tabs tabs-2 light darken-3" role="tablist">
                 <li class="nav-item">
-                    <a id="btnCategory" class="nav-link active" data-toggle="tab" href="#" role="tab">Categorias</a>
+                    <a id="btnCategory" class="nav-link" data-toggle="tab" href="#" role="tab">Categorias</a>
                 </li>
                 <li class="nav-item">
                     <a id="btnTag" class="nav-link" data-toggle="tab" href="#" role="tab">Tags</a>
                 </li>
                 <li class="nav-item">
                     <a id="btnConfig" class="nav-link" data-toggle="tab" href="#" role="tab">Requisições</a>
+                </li>
+                <li class="nav-item">
+                    <a id="btnStatistics" class="nav-link active" data-toggle="tab" href="#" role="tab">Estatísticas</a>
                 </li>
             </ul>
 
@@ -179,6 +182,10 @@
 
             <!-- TOTAL BOOK CAPACITY USAGE -->
             <div id="barBookCapacity" class="statistics col-md-12">
+            </div>
+
+            <!-- TOTAL BOOK AVAILABLE -->
+            <div id="barBookAvailable" class="statistics col-md-12">
             </div>
 
 
