--- a/html/bookSelect.html
+++ b/html/bookSelect.html
@@ -217,7 +217,7 @@
                                     <img src="../images/logo.png" id="userIcon" class="img-fluid img-thumbnail rounded-circle" alt="">
                                 </td>
                                 <td>
-                                    <textarea name="" id="inputComment" class="form-control" cols="10" rows="2" placeholder="Adicionar um comentário" readonly></textarea>
+                                    <textarea name="" id="inputComment" class="form-control" cols="10" rows="2" placeholder="Adicionar um comentário"></textarea>
                                 </td>
                             </tr>
                             <tr>
