--- a/index.html
+++ b/index.html
@@ -52,10 +52,27 @@
                         </li>
 
                         <!-- //////////   -->
-                        <form action="/action_page.php">
+                        <li id="optSearch" class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img src="images/profile_s.png" id="userSearch" height="32" width="32">
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownId">
+                              <!--  <a id="optLogin" class="dropdown-item" data-toggle="modal" data-target="#modalLogin" href="#">Log in</a>
+                                <a id="optRegister" class="dropdown-item" data-toggle="modal" data-target="#modalRegister" href="#">Registar</a>
+                                <a id="optProfile" class="dropdown-item" href="html/userProfile.html">Perfil</a>
+                                <a id="optHistory" class="dropdown-item" href="html/userHistory.html">Histórico</a>
+                                <a id="optPreferences" class="dropdown-item" href="html/userPreferences.html">Preferências</a>
+                                <a id="optLogout" class="dropdown-item" href="#">Log Out</a>-->
+                                <input type="submit" id="btnSearch">
+                            </div>
+                        </li>
+
+
+
+                     <!--   <form action="/action_page.php">
                             <input list="search" id="srchBooks">
                             <input type="submit" id="btnSearch">
-                        </form>
+                        </form>-->
                         <!-- //////////   -->
 
                         <!-- PROFILE -->
