userHistory modal Rating

--- a/html/userHistory.html
+++ b/html/userHistory.html
@@ -220,7 +220,7 @@
 
                             <!-- BUTTON -->
                             <div class="modal-footer">
-                                <button type="button" id="btnModalRating" class="btn btn-modal btn-primary"><i class='fa fa-star'></i></button>
+                                <button type="button" id="btnModalRating" data-toggle="modal" data-target="#modalRating" class="btn btn-modal btn-primary"><i class='fa fa-star'></i></button>
                             </div>
                         </form>
                     </div>
