--- a/html/bookList.html
+++ b/html/bookList.html
@@ -205,6 +205,11 @@
                 <!-- BUTTON -->
                 <button type="button" id="btnFilter" class="btn btn-primary">Filtrar</button>
             </form>
+            
+            <div id="btnContainer" class="col align-self-end">
+                <button id="btnList" class="btn"><i class="fa fa-bars"></i> List</button> 
+                <button id="btnGrid" class="btn"><i class="fa fa-th-large"></i> Grid</button>
+            </div>
 
             <!-- BOOKS -->
             <div id="catalogBooks" class="inner">      
