--- a/NOMAD/html/bookList.html
+++ b/NOMAD/html/bookList.html
@@ -383,7 +383,7 @@
         <!-- Custom JS -->
         <script src="../js/portugal.js"></script>
         <script src="../js/models.js"></script>
-        <script src="../js/bookList.js"></script>
+        <script src="../js/bookListTemp.js"></script>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
